--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "normsquare"
+name = "normsphere"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-image = "0.24.5"
-nalgebra = "0.32.2"
+image = "0.25.6"
+nalgebra = "0.33.2"
